# react-native-rs

./: Cargo.toml  README.md  proof.json  rust_ios.sh  test_code_with_c  vk.json
examples/: testrust.rs
rust_lib/: MyRustModule.m  rust_module.h
scripts/: rust_ios.sh  test_rust_in_c.sh
src/: lib.rs
src/datatrade/: cat.rs  circuit.rs  dog.rs  mod.rs  tiger.rs  tool.rs
src/gadget/: mod.rs
src/gadget/hashes/mimc7/: mod.rs
src/gadget/merkle_tree/: mod.rs
src/gadget/public_encryptions/elgamal/: mod.rs
src/gadget/symmetric_encrytions/symmetric/: constraints.rs  mod.rs
test/: test.rs
test_rust_in_c/: apple  test.c
